--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,7 +13,7 @@
       <p>
         {% blocktrans %} Welcome back to Schöneberg Alert! To leave a comment or
         like an Alert, please log in. If you have not created an account yet,
-        then <a href="{{ signup_url }}">sign up</a> first.
+        then <a href="{{ signup_url }}">register</a> first.
         <!--Stop-->
         {% endblocktrans %}
       </p>
