--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,7 +2,7 @@
 <!--Stop-->
 {% load i18n %}
 <!--Stop-->
-{% block head_title %}{% trans "Signup" %}{% endblock head_title %}
+{% block head_title %}{% trans "Register" %}{% endblock head_title %}
 <!--Stop-->
 {% block content %}
 <div class="center-content" style="background: #b8e0a8">
@@ -10,7 +10,7 @@
 
   <p>
     {% blocktrans %}Already have an account? Then please
-    <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+    <a href="{{ login_url }}">log in</a>.{% endblocktrans %}
   </p>
 
   <form
