--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -45,7 +45,7 @@
                 action="{% url 'post_like' post.slug %}"
                 method="POST"
               >
-                {% csrf_token %} {% if liked %}
+                {% csrf_token %} {% if not liked %}
                 <button
                   type="submit"
                   name="blogpost_id"
