--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </footer>
-    <script src="../static/script/script.js"></script>
+    <script src="{% static 'script/script.js' %}"></script>
     <script>setTimeout(function () {
             let messages = document.getElementById("msg");
             let alert = new bootstrap.Alert(messages);
